# NWICU_MEDS

./: .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: python-build.yaml
src/MIMIC_IV_MEDS/: __init__.py  __main__.py  dataset.yaml  download.py  pre_MEDS.py
src/NWICU_MEDS/: __init__.py  __main__.py  commands.py  dataset.yaml  pre_MEDS.py
src/NWICU_MEDS/configs/: event_configs.yaml
tests/: e2e_demo_test.py
